Archive2/5c/68898d1cf6a096/output
main.cpp:4:42: error: 'size_t' in namespace 'std' does not name a type
         template<typename Iterator> std::size_t hash_permute(Iterator begin, Iterator end) {
                                          ^
main.cpp:9:54: error: 'size_t' in namespace 'std' does not name a type
         template<typename T, typename... Other> std::size_t hash_permute(T&& arg, Other&&... other) {
                                                      ^
main.cpp:12:54: error: 'size_t' in namespace 'std' does not name a type
         template<typename... T, unsigned... Is> std::size_t hash_permute(std::tuple<T...> args, indices<Is...>) {
                                                      ^
main.cpp:15:38: error: 'size_t' in namespace 'std' does not name a type
         template<typename... T> std::size_t hash_permute(std::tuple<T...> args) {
                                      ^
main.cpp:18:42: error: 'size_t' in namespace 'std' does not name a type
         template<typename Iterator> std::size_t hash_combine(Iterator begin, Iterator end) {
                                          ^
main.cpp:23:54: error: 'size_t' in namespace 'std' does not name a type
         template<typename T, typename... Other> std::size_t hash_combine(T&& arg, Other&&... other) {
                                                      ^
main.cpp:26:54: error: 'size_t' in namespace 'std' does not name a type
         template<typename... T, unsigned... Is> std::size_t hash_combine(std::tuple<T...> args, indices<Is...>) {
                                                      ^
main.cpp:29:38: error: 'size_t' in namespace 'std' does not name a type
         template<typename... T> std::size_t hash_combine(std::tuple<T...> args) {
                                      ^
